<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.apps_magang.dashboard.presentation.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_ingredients"
            app:destination="@id/navigation_ingredients" />
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_product"
            app:destination="@id/navigation_product" />
    </fragment>

    <fragment
        android:id="@+id/navigation_ingredients"
        android:name="com.example.apps_magang.ingredients.presentation.IngredientsFragment"
        android:label="@string/title_ingredients"
        tools:layout="@layout/fragment_ingredients" >
        <action
            android:id="@+id/action_navigation_ingredients_to_navigation_product"
            app:destination="@id/navigation_product" />
        <action
            android:id="@+id/action_navigation_ingredients_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.example.apps_magang.product.presentation.ProductFragment"
        android:label="@string/title_product"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_navigation_product_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_product_to_navigation_ingredients"
            app:destination="@id/navigation_ingredients" />
    </fragment>
</navigation>