<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/Primary30"
    tools:context=".dashboard.presentation.DashboardFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_detail_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tv_greeting_dashboard"
        style="@style/MonaSemiBold18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:text="@string/dashboard_greeting"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/tv_info_dashboard"
        style="@style/MonaRegular14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/dashboard_info"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_greeting_dashboard" />

    <ScrollView
        android:id="@+id/sc_dashboard"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:background="@drawable/background_dashboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_dashboard"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_carousel"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="40dp" />

            <LinearLayout
                android:id="@+id/dotsIndicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vp_carousel" />

            <TextView
                android:id="@+id/tv_recommendation"
                style="@style/MonaSemiBold14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/recommendation"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dotsIndicator" />

            <TextView
                android:id="@+id/tv_eyeshadow"
                style="@style/MonaRegular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/eyeshadow_product"
                android:textColor="@color/Primary_50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_recommendation" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_eyeshadow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_eyeshadow"
                tools:listitem="@layout/eyeshadow_recommendation" />

            <TextView
                android:id="@+id/tv_foundation"
                style="@style/MonaRegular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/foundation_product"
                android:textColor="@color/Primary_50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_eyeshadow" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_foundation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_foundation"
                tools:listitem="@layout/eyeshadow_recommendation" />

            <TextView
                android:id="@+id/tv_lipstick"
                style="@style/MonaRegular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/lipstik_product"
                android:textColor="@color/Primary_50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_foundation" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_lipstick"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_lipstick"
                tools:listitem="@layout/eyeshadow_recommendation" />

            <TextView
                android:id="@+id/tv_mascara"
                style="@style/MonaRegular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/blush_product"
                android:textColor="@color/Primary_50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_lipstick" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_blush"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_mascara"
                tools:listitem="@layout/eyeshadow_recommendation" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>