<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:backgroundTint="@color/white"
    tools:ignore="TextSizeCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:paddingBottom="10dp"
        android:layout_marginVertical="5dp">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:contentDescription="todo"
            android:scaleType="centerCrop"
            android:src="@drawable/img_product2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/by_category"
            android:textColor="@color/Primary_50"
            style="@style/MonaSemiBold12"
            app:layout_constraintBottom_toTopOf="@id/tvProductName"
            app:layout_constraintStart_toEndOf="@id/ivProduct"
            app:layout_constraintTop_toTopOf="@id/ivProduct" />

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLength="16"
            android:text="@string/name_product"
            android:textColor="@color/black"
            style="@style/MonaSemiBold14"
            app:layout_constraintStart_toStartOf="@id/tvCategory"
            app:layout_constraintTop_toBottomOf="@id/tvCategory" />

        <TextView
            android:id="@+id/tvProductDesc"
            style="@style/MonaRegular12"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:maxWidth="200dp"
            android:maxLength="50"
            android:maxLines="2"
            android:ellipsize="end"
            android:text="@string/desc_product"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/tvProductName"
            app:layout_constraintTop_toBottomOf="@id/tvProductName" />

        <TextView
            android:id="@+id/tvSign"
            style="@style/MonaSemiBold12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="$"
            android:textColor="@color/Primary_50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvProductDesc"/>

        <TextView
            android:id="@+id/tvPrice"
            style="@style/MonaSemiBold12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="3dp"
            android:text="Price"
            android:textColor="@color/Primary_50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSign" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>